--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,42 @@ h2 {
     text-align: center;
 }
 
+
 .image__button {
-    margin-top: 1.1em;
-    text-decoration:none;
+  background: #FCD8D4; /* color de fondo */
+  color: #fff; /* color de fuente */
+  padding: 10px 15px;
+  border-radius: 15px; /* redondear bordes */
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  display: inline-block;
+  text-decoration: none;
+  margin-top: 10px;
+}
+.image__button:hover {
+  color: #fff; /* color de fuente hover */
+}
+.image__button::after {
+  content: "";
+  background: #F5C6AA; /* color de fondo hover */
+  position: absolute;
+  z-index: -1;
+  padding: 16px 20px;
+  display: block;
+  top: 100%;
+  bottom: -100%;
+  left: 0;
+  right: 0;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+}
+
+.image__button:hover::after {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
 }
