--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ h2 {
 }
 
 .card__button {
-    background: #FCD8D4;
+    background: #f3c1ba;
     color: #fff;
     padding: 10px 15px;
     border-radius: 15px; 
@@ -149,7 +149,7 @@ h2 {
 
 .card__button::after {
     content: "";
-    background: #F5C6AA;
+    background: #f1b592;
     position: absolute;
     z-index: -1;
     padding: 16px 20px;
@@ -176,13 +176,6 @@ h2 {
     color: #594A41;
 }
 
-#bienvenida {
-    font-family: 'DM Serif Display', serif;
-    font-size: 1.9rem;
-    display: inline-block;
-    position: relative;
-    color: #594A41;
-}
 
 .card {
     transition: all 0.5s ease;
@@ -342,3 +335,110 @@ form .field input[type="submit"]{
     border: none;
     cursor: pointer;
 }
+
+/* boton carrito */
+#boton-carrito {
+    display: flex;
+    border: none;
+    color: #594A41;
+    background-color: #f8eee4ea;;
+    font-size: 40px;
+    padding: 9px 9px;
+    margin-right: 20px;
+    transition: all 0.3s;
+}
+
+#boton-carrito:hover {
+    cursor: pointer;
+    color: white;
+    background-color: #F5C6AA;
+}
+
+#boton-carrito:focus {
+    outline: none;
+}
+
+/* .modal-contenedor {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal-active {
+  opacity: 1;
+  visibility: visible;
+  z-index: 5;
+}
+
+.modal-carrito {
+  position: relative;
+  background-color: white;
+  border: 1px solid rgb(225, 76, 65);
+  min-width: 500px;
+  padding: 20px;
+  margin-top: -100%;
+  transition: all 0.5s;
+}
+
+.modal-active .modal-carrito {
+  margin-top: 0;
+}
+
+.modal-carrito h3 {
+  color: rgb(225, 76, 65);
+  padding-bottom: 5px;
+}
+.modal-carrito #carritoCerrar {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 20px;
+  color: rgb(225, 76, 65);
+  border: none;
+  background-color: white;
+}
+.modal-carrito #carritoCerrar:hover {
+  cursor: pointer;
+}
+.modal-carrito #carritoCerrar:focus {
+  outline: none;
+}
+.modal-carrito .precioProducto {
+  padding-top: 10px;
+}
+
+.productoEnCarrito {
+    border-left: 5px solid lightblue;
+    border-bottom-left-radius: 3px;
+    border-top-left-radius: 3px;
+    margin: 5px 0;
+    padding: 5px 10px;
+    display: flex;
+    justify-content: space-between;
+}
+.productoEnCarrito:hover {
+    border-left: 5px solid rgb(225, 76, 65);
+}
+  
+.boton-eliminar {
+    background-color: white;
+    color: red;
+    border: none;
+    font-size: 20px;
+}
+  
+.boton-eliminar:hover {
+    cursor: pointer;
+}
+.boton-eliminar:focus {
+    outline: none;
+} */
+  
